# youtube-live-channels

./: README.md  channels.json  channels.meta.json  pyproject.toml  requirements.txt  temp.txt
.devcontainer/: devcontainer.json
.github/workflows/: youtube-to-channels.yml
live_stream_catalog/: __main__.py  cli.py  config.py
live_stream_catalog/grabber/: grabber.py
live_stream_catalog/io/: __init__.py  json_store.py
live_stream_catalog/models/: __init__.py  channel.py  run_meta.py
live_stream_catalog/plugins/: __init__.py  kick.py
live_stream_catalog/resources/: kick_channels.json  script_discovered_catalogs.json  twitch_channels.json  youtube_channels.json  youtube_live_discovery_channels.json
live_stream_catalog/services/: build.py  catalog_state.py  expiry.py  metadata.py  refresh.py  resolver.py
live_stream_catalog/sources/: __init__.py  loader.py  registry.py  script_discovered_catalog.py  youtube_live_discovery.py
tests/: test_script_discovered_catalog.py  test_script_discovered_catalog_integration.py
tests/integration/: test_script_discovered_catalog_integration.py
tests/unit/: test_build.py  test_expiry.py  test_io.py  test_loader.py  test_refresh.py  test_resolver.py  test_script_discovered_catalog.py  test_youtube_live_discovery.py
youtube_to_channels/: __main__.py
youtube_to_channels/grabber/: dailymotion_grabber.py  grabber.py  youtube_grabber.py
youtube_to_channels/resources/: dailymotion_channels.json  twitch_channels.json  youtube_channels.json
